# ethminer

./: .gitmodules  CMakeLists.txt  README.md  demo.md  test.c
cmake/: EthCompilerSettings.cmake
cmake/Hunter/: config.cmake
ethminer/: CMakeLists.txt  main.cpp
libapicore/: ApiServer.cpp
libdevcore/: Exceptions.h
libethash/: CMakeLists.txt
libethash-cl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt  ProgPowCLMiner.cpp  ProgPowCLMiner.h  demo.md
libethash-cl/kernels/cl/: .gitignore  ethash.cl  progpow.cl
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h
libethash-legacy/: CMakeLists.txt  ethash.h  internal.c  internal.h  legacy_ethash.h
libethcore/: BlockHeader.h  CMakeLists.txt  EthashAux.h  Farm.cpp  Farm.h  Miner.cpp  Miner.h  ProgPowAux.cpp  ProgPowAux.h
libminer-metal/: CMakeLists.txt  MetalMiner.cpp  MetalMiner.h
libpoolprotocols/: PoolClient.h  PoolManager.h
libpoolprotocols/stratum/: EthStratumClient.cpp  EthStratumClient.h
libprogpow/: ProgPow.cpp
libprogpow-cuda/: CMakeLists.txt  ProgPowCUDAMiner.cpp  ProgPowCUDAMiner.h  ProgPowCUDAMiner_cuda.cu  ProgPowCUDAMiner_cuda.h
